# Expense_Tracker_MCP

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  create_tables.py  docker-compose.yml  instruction.md  locustfile.py  main.py  project.md  pyproject.toml  pytest.ini  sample.txt  test_currency.py
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  20260719_1756_fc94bd0ef0c2_initial_schema.py
expense_tracker/: __init__.py  server.py
expense_tracker/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
expense_tracker/database/: __init__.py  base.py  session.py
expense_tracker/database/models/: __init__.py  audit_log.py  budget.py  category.py  credit_card.py  expense.py  expense_attachment.py  subcategory.py  user.py
expense_tracker/repositories/: __init__.py  audit_log_repository.py  base.py  budget_repository.py  category_repository.py  credit_card_repository.py  expense_repository.py
expense_tracker/schemas/: __init__.py  base.py  budget.py  category.py  credit_card.py  expense.py  user.py
expense_tracker/services/: __init__.py  analytics_service.py  base.py  budget_service.py  category_service.py  credit_card_service.py  currency_service.py  expense_service.py  report_service.py
expense_tracker/tools/: __init__.py  analytics_tools.py  budget_tools.py  category_tools.py  credit_card_tools.py  expense_tools.py  report_tools.py
expense_tracker/utils/: __init__.py  datetime_utils.py  response.py
tests/: conftest.py
tests/database/: conftest.py  test_chaos.py  test_connection_pool.py  test_postgres_specific.py  test_transactions.py
tests/integration/repositories/: test_expense_repository_integration.py
tests/integration/services/: test_services.py
tests/mcp/: test_fuzzing.py  test_handlers.py  test_protocol.py
tests/performance/: test_benchmarks.py
tests/unit/repositories/: test_expense_repository_unit.py
tests/unit/schemas/: test_budget_schemas.py  test_category_schemas.py  test_expense_schemas.py  test_user_schemas.py
tests/unit/services/: test_credit_card_service_unit.py  test_currency_service.py  test_expense_service_unit.py  test_expense_service_update_delete.py  test_report_service_unit.py
tests/unit/tools/: test_analytics_tools.py  test_budget_tools.py  test_category_tools.py  test_credit_card_tools.py  test_expense_tools.py  test_report_tools.py
(+1 files in other folders)
