[project]
name = "expense-tracker-mcp-server"
version = "1.0.0"
description = "Production-grade Expense Tracker MCP Server with PostgreSQL, Clean Architecture, and AI-ready extensibility."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Satyam Singh" }]

dependencies = [
    # MCP Framework
    "fastmcp>=3.4.4",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.1.0",

    # Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Environment
    "python-dotenv>=1.0.0",

    # Logging
    "structlog>=24.1.0",

    # Reports
    "openpyxl>=3.1.0",
    "reportlab>=4.1.0",

    # API Client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
expense-tracker = "expense_tracker.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expense_tracker"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.isort]
known-first-party = ["expense_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires database)",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[tool.mypy.overrides]
module = ["tests.*"]
disallow_untyped_defs = false
